--- a/sejarah_saya.html
+++ b/sejarah_saya.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="index.php">Beranda</a>
-        <a href="articles.php">Artikel</a>
-        <a href="profile.php">Profil</a>
+        <a href="index.html">Beranda</a>
+        <a href="articles.html">Artikel</a>
+        <a href="profile.html">Profil</a>
     </div>
     <div class="content">
         <h1>Sejarah M.Farrel.A</h1>
