--- a/articles.html
+++ b/articles.html
@@ -15,7 +15,7 @@
     <div class="content">
         <h1>List Artikel</h1>
         <ul>
-            <li><a href="sejarah_saya.php">Sejarah Aku</a></li>
+            <li><a href="sejarah_saya.html">Sejarah Aku</a></li>
         </ul>
     </div>
 </body>
